syntax = "proto3";

package proto;

import "google/api/annotations.proto";

service ContactService {
  rpc Create(Contact) returns (Contact) {
    option (google.api.http) = {
      post: "/v1/contacts",
      body: "*"
    };
  }
}

service MirrorService {
  rpc Get(MirrorGetRequest) returns (MirrorGetResponse) {
    option (google.api.http) = {
      get: "/v1/mirrors"
    };
  }
  rpc Create(Mirror) returns (Mirror) {
    option (google.api.http) = {
      post: "/v1/mirrors",
      body: "*"
    };
  }
}

message Contact {
  int32 id = 1;
  string name = 2;
  string email = 3;
}

message MirrorGetRequest {
  int32 limit = 1;
  int32 offset = 2;
}

message MirrorGetResponse {
  repeated Mirror mirrors = 1;
}

message Mirror {
  string name = 1;
  string ipv4 = 2;
  string ipv6 = 3;
  int64 created_at = 4;
  int64 online_since = 5;
  int64 bandwidth = 6;
  int64 traffic = 7;
  string location = 8;
  enum Type {
    OFFER = 0;
    PETITION = 1;
  }
  Type type = 9;
  int32 id = 10;
  int32 contact_id = 11;
}

